# chirpstack-provisioning

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  BACKUP_API_ANALYSIS.md  BACKUP_TESTS_README.md  Dockerfile  PARALLEL_IMPLEMENTATION.md  README.md  SCHEMA_MIGRATION.md  bundled-cleanedpointers.schema.json  bundled.schema.json  data.md  devices.schema.json  doc.md  pyproject.toml  requirements.txt  schema.json  setup.example.json  setup.schema.json  validate.py
docs/: schemas.md
examples/: sample_devices.csv  sample_devices.json  sample_devices.jsonl  sample_gateways.json  sample_mixed.csv  sample_mixed.json  sample_mixed.jsonl  sample_setup.json  validate_examples.py
proto/: Dockerfile  doc.md
proto/bundler/: README.md  package-lock.json  package.json  tsconfig.json
proto/bundler/src/: bundle-schema.ts
proto/jsonschema/application/: api.Application.jsonschema.strict.json  api.ApplicationDeviceProfileListItem.jsonschema.strict.json  api.ApplicationDeviceTagListItem.jsonschema.strict.json  api.ApplicationListItem.jsonschema.strict.json  api.AwsSnsIntegration.jsonschema.strict.json  api.AzureServiceBusIntegration.jsonschema.strict.json  api.BlynkIntegration.jsonschema.strict.json  (+74 more)
schemas/: Application.json  Device.json  DeviceProfile.json  Gateway.json  InfluxDbIntegration.json  Tenant.json
src/: ChirpStackClient.py  config.py  main.py
src/chirpstack_provisioning/: schema.py  schemas.py  setup.py  validation.py
tests/: test_api_handler.py  test_backup.py  test_schema.py  test_schemas.py  test_setup.py  test_setup_id_updates.py
(+210 files in other folders)
