[project]
name = "chirpstack-provisioning"
version = "0.1.0"
description = ""
authors = [
    {name = "limjh16",email = "jlim@tecintegral.cl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chirpstack-api (>=4.14.1,<5.0.0)",
    "typer (>=0.19.2,<0.20.0)",
    "rich (>=14.1.0,<15.0.0)",
    "jsonschema (>=4.25.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "chirpstack_provisioning", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "ruff (>=0.13.2,<0.14.0)"
]
